--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="overlay3" id="overlay3">
                   <div>helloworld3</div>
                 </div>
-          <pre>
+          <a href="https://mankunguo.github.io/alltypesoftypewriter-spread/"><pre>
        I------++------I
        O              O
        O              O
@@ -102,6 +102,7 @@
    --___________________-- 
      
                  </pre>
+                </a>
         </div>
         <div class="description">
           <div>stretch</div>
