--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="overlay2" id="overlay2">
                   <div>helloworld2</div>
                 </div>
-          <pre>
+         <a href="https://mankunguo.github.io/alltypesoftypewriter-nonlinear/"> <pre>
       X-------_-------X
       X               X
       X               X
@@ -72,7 +72,7 @@
 |    :_: :_: :_: :_: :_:    |
  \    (===============)    /
    \-___-------------___-/
-                 </pre>
+                 </pre></a>
         </div>
         <div class="description">
           <div>stretch</div>
